## -*- Makefile.am -*-
## Process this file with automake to produce Makefile.in
##
# Makefile for the ratfor/doc subdirectory.
# $Id$

## Manual pages to be installed.
dist_man1_MANS = ratfor.man
CLEANFILES = $(dist_man1_MANS)

dist_doc_DATA = ratfor.pdf

#--------------------------------------------------------------------------

## vim: ft=automake noet sw=4 ts=4
