## -*- Makefile.am -*-
## Process this file with automake to produce Makefile.in
##
# Makefile for auxiliary programs of the Ratfor Testsuite.

check_PROGRAMS = timer$(EXEEXT)

timer_SOURCES = timer.c

#XXX: to be removed
# Let a call to `make all' rebuild all the scripts/programs needed by the
# testsuite.
all-local: $(check_SCRIPTS)

## vim: ft=automake noet sw=4 ts=4
