## -*- Makefile.am -*-
## Process this file with automake to produce Makefile.in
##
# C Ratfor: a ratfor preprocessor written in C.
# Makefile for the `src/' subdirectory.

bin_PROGRAMS = c-ratfor

c_ratfor_SOURCES = \
    rat4-global.h \
	rat4-common.h \
	tok-types.h \
	lex-types.h \
	main.c \
	error.c error.h \
	io.c io.h \
	xopen.c xopen.h \
	hash.c hash.h \
	init.c init.h \
	tokenizer.c tokenizer.h \
	parser.c parser.h \
	labgen.c labgen.h \
	codegen.c codegen.h

## vim: ft=automake noet sw=4 ts=4
