## -*- Makefile.am -*-
# Top-level Makefile for the Ratfor Testsuite.

ACLOCAL_AMFLAGS = -I m4 --install

# The order *is* significant here!
SUBDIRS = lib sanity-checks tests

# List of extra files to be put in the distributed tarball.
EXTRA_DIST = HACKING

# Include maintainer-specific checks.
include am/MaintainerChecks.am

## vim: ft=automake noet sw=4 ts=4
